--- a/Thesis/lm.tex
+++ b/Thesis/lm.tex
@@ -1,11 +1,11 @@
 \section{Language Modeling}
 \label{chap:prior:sec:lm}
-In Section \ref{chap:prior:sec:lm:otherlm}, we briefly review what language modeling is, various methodologies, and why language modeling is so useful for NLP. Then, in Section \ref{chap:prior:sec:lm:elmo} introduce ELMo followed by BERT in Section \ref{chap:prior:sec:lm:bert}. Then, in Section \ref{chap:prior:sec:lm:otherlm}, we discuss some other major LMs and how the broader NLP community is using them. Finally, in Section \ref{chap:prior:sec:lm:effects}, we discuss some of the effects of training and using large LMs to ground our research's motivation.
+In Section \ref{chap:prior:sec:lm:overview}, we briefly review what language modeling is, various methodologies, and why language modeling is so useful for NLP. Then, in Section \ref{chap:prior:sec:lm:elmo} introduce ELMo followed by BERT in Section \ref{chap:prior:sec:lm:bert}. Then, in Section \ref{chap:prior:sec:lm:otherlm}, we discuss some other major LMs and how the broader NLP community is using them. Finally, in Section \ref{chap:prior:sec:lm:effects}, we discuss some of the effects of training and using large LMs to ground our research's motivation.
 \subsection{What is Language Modeling}
 \label{chap:prior:sec:lm:overview}
 Language modeling is a way to assign a probability distribution over some textual representation. In other words, if the task is to model $n$-grams, the probability of a current input is the probability of a token $w_i$ given the previous $i$ tokens. This is commonly factorized as \fullref{equation:langmodel}:
 \begin{equation}
-    P(w_{1},\ldots ,w_{m})=\prod _{i=1}^{m}P(w_{i}\mid w_{1},\ldots ,w_{i-1})\approx \prod _{i=1}^{m}P(w_{i}\mid w_{i-(n-1)},\ldots ,w_{i-1})}
+    P(w_{1},\ldots ,w_{m})=\prod _{i=1}^{m}P(w_{i}\mid w_{1},\ldots ,w_{i-1})\approx \prod _{i=1}^{m}P(w_{i}\mid w_{i-(n-1)},\ldots ,w_{i-1})
 \label{equation:langmodel}
 \end{equation} Language models can be useful methods to represent natural language because they allow models to differentiate meanings of sentences based on context. In other words a model is able to understand that the word `fly' can mean different things in the sentences: `You look fly', `Lets fly away!', `That is a fly'. \\
 While language modeling is by no means a new concept, it was not until the introduction of Neural Network based LM that these representations were able to serve as general understanding frameworks. Before these Neural Network Language Models (NNLM), most language modeling usually focused on modeling some form of an N-gram where the probability of a word only depends on the previous N-words. Large Neural-Network-based LMs are the first step in an NLP application as a way of turning some form of textual input into a representation in a vector space. \\
