--- a/Thesis/method.tex
+++ b/Thesis/method.tex
@@ -10,7 +10,7 @@ Our methodology is driven around three main research questions:
 In Section \ref{chap:method:sec:structure}, we will first describe our experiment's structure as scoped to various implementations of curriculum learning. Next, in Section \ref{chap:method:sec:cldevelopment} we will describe and discuss our methods for curriculum development. Then in Section \ref{chap:method:sec:training} we will discuss how we will train and evaluate our LMs and how we will explore hyperparameter tuning.
 \section{Experiment Structure}
 \label{chap:method:sec:structure}
-Our experimentation strategy is simple: train many models with a fixed structure and hyper-parameters using different curricula. Our implementation of this strategy is achieved by exploring two different curricula: corpus replacement curricula and competence curricula. The corpus replacement style (CRS) is a method in which we modify the training data and use this gradually changing training data with an unmodified LM. The competence based curricula (CBC) is a method which assigns some noti   is focused on creating a curriculum method based on modifying a training corpus  Once a robust set of models are trained, all models are evaluated on a portion of the training corpus which was not used for training and fine-tuned on the GLUE Benchmark. What we describe as corpus replacement CRS  curricula is our implementation of the method originally described by Bengio et al., 2009 \cite{Bengio2009CurriculumL} and discussed in Section \ref{chap:prior:sec:cl}. For competency-based curricula (CBC), we introduce a new data loader to sample progressively more complex batches. 
+Our experimentation strategy is simple: train many models with a fixed structure and hyper-parameters using different curricula. Our implementation of this strategy is achieved by exploring two different curricula: corpus replacement style and competence based curriculum. Once a robust set of models are trained with each curriculum method, all models are evaluated on a held out portion of the training corpus and fine-tuned on the GLUE Benchmark. In the corpus replacement style (CRS) we create multiple distinct training data sets which are are used to train an unmodified LM. In the competence based curricula (CBC) we first assign a notion of difficulty to each sample in a dataset and then alter the batch sampling method within the language model to sample from a gradually difficult training data. Our CRS method provides few controls but is computationally cheap while the CBC provides ample control at the cost of computational overhead. \\
 \subsection{Language Model}
 To optimize how quickly we can train our systems, we will only explore the curriculum's effect on an established successful baseline, ELMo \cite{Smith2019ContextualWR}. We leverage the code\footnote{https://github.com/allenai/bilm-tf} used for the original ELMo experiments and use the same hyper-parameters reported in their paper. We make two changes to the original implementation: an ability to use a CBC and the introduction of padding token $<PAD>$. In the original implementation, the training loader will load a text file, shuffle all the lines, and then iterate through them. In our implementation of CBC, we load the full corpus, which we do not shuffle, then select a batch at random from the examples that meet our model's current competence. Our implementation changes data sampling to unconstrained random sampling without replacement to sampling with replacement. Since our implementation of competence curricula is based on sentence-level difficulty, it becomes possible that batches include sentences that are smaller than the defined context length that meets the original ELMo implementation (20 tokens). As a result, we have to introduce a padding token, $<PAD>$, which ensures that each sentence is at least the context window's size. To avoid having the model learn to predict the $<PAD>$ token, we introduce a masking function that sets the loss to 0 for any padding token. \\
 It is worth noting that the introduction this token increases the computational cost to train a model as all padding tokens are essentially lost computation. To calculate the effect of this we counted the amount of padding tokens that are introduced in the wikitext-103 corpus by While we did not compute the cost of using this method for each of our curriculum methods we estimated the inefficiency introduce by this method by calculating the amount of padding tokens introduced. In the wikitext-103 corpus the training corpus has 101,425,658 tokens. When this is parsed into sentences and we sum the modulo of the context window(20) over all sentences we find we must introduce 42,547,653. If we do not split the corpus into sentences we still must introduce 12,204,311 tokens. This means that before even accounting for the cost of the curriculum implementation our model training requires about 12.03 or 41.95 percent more FLOPs. 
@@ -34,9 +34,9 @@ To measure the quality of our LMs downstream we will use the industry standard G
 \label{chap:method:sec:cldevelopment}
 \subsection{Baseline}
 Before we study the effect of curriculum learning on language modeling we first retrain the public ELMo model on our datasets and evaluate on GLUE. We also download the publicly released ELMo models and evaluate on GLUE. Our training of ELMo is done on for 10 epochs on the wikitext-2 and wikitext-103.
-\subsection{Corpus modification}
-Corpus modification follows the implementation covered in the Bengio et al., 2009 \cite{Bengio2009CurriculumL} implementation of curriculum learning. In their implementation, they train a AR LM. The curriculum they used is based on vocabulary occurrence. In the first stage of the curriculum, the model trains one full epoch (the entire dataset) but all words that are not part of the 5,000 most common are ignored. For the second stage, the corpus is kept constant but only words that are not part of the 10,000 most common are ignored. This process of vocabulary expansion is continued until the model is able to train on the entire vocabulary. In the original implementation the authors see improved model performance and quicker convergence in later stages. \\
-In our implementation, we apply this strategy to our two corpuses and generate 7 files per corpus. When a word does is above the commonality threshold it is replaced with the <UNK> token. Using these files we train on each for one full epoch and train for an additional 4 epochs on the full vocabulary file. The relative vocabulary size for each of these six splits is dataset dependent with the breakdowns for our dataset found in Table \ref{table:2}.
+\subsection{Corpus Replacement Style}
+Corpus Replacement Style is inspired by the the Bengio et al., 2009 \cite{Bengio2009CurriculumL} implementation of curriculum learning for LM. In their implementation, they train an AR LM with examples from a corpus with a context window of size 5. In the epoch the model trains on all 5 token spans which only contain the 5,000 most common tokens. For the second epoch, training mirrors the prior epoch but with a threshold of 10,000 most common words. This process continues until the model is training on a full unaltered corpus. \\
+In early experiments we explored an approach modeled after the Bengio et al., 2009 method but as context size of ELMo is much larger performance suffered. Seeking to preserve the separation of model training and training data creation we created what we refer to as Corpus Replace Style (CRS) curriculum. In this implementation we simplify the corpus not by removing training spans but by replacing words less common than the threshold with an <UNK> token. Threshold selection was done by exploring various increment sizes and initial threshold size and our final most successful methods produced 6 unique datasets for input dataset. To match the training time of our baseline we train one epoch on each corpus and an additional 4 on the unaltered corpus. Details on corpus thresholds can be found in Table \ref{table:2}.
 \begin{table}[h!]
 \begin{center}
 \begin{tabular}{|l|l|l|l|l|l|l|l|} \hline
@@ -49,8 +49,9 @@ enwiki-103 & 25,000 & 50,000 & 75,000 & 100,000 & 150,000  & 250,000 & 267,735\\
 \end{center}
 \end{table}
 \subsection{Competence Method}
-Following the work of \cite{Platanios2019CompetencebasedCL} introduced in Section \ref{chap:prior:sec:cl:cl} we will apply the notion of a CBC to LM training. CBC methods rely on the ability to assign a difficulty score to each sample in the training corpus and use this to only allow the model to train on samples that are easier than its current competence level. A model's competence score is defined by how far along in a training regime the model is. In order to stay consistent with the BS experimentation we design the curricula to last 6 epochs which means we essentially have a fully competent model after $\frac{2}{3}$ of the 10 epochs. \\
-Our training corpus, $X$ is a collection of sentences $S$, where each sentence $s_i$ is a sequence of words $s_i= w_o^i,w_1^i,...,w_n^i$ and each sentence is assigned a difficulty $\epsilon_{s_i}$. At each step in training model competence is represented by $\lambda_t$ where $\lambda_0$ represents the initial competence and $\lambda_{increment}$ represents how much model competence increases after each training batch. Prior to training, each sentence in the training data has been assigned a difficulty score from 0 to 1 represented by $\epsilon_{s_i}$. For each training batch, the model is only able to train on samples that have a difficulty where $\epsilon_{s_i} <= \lambda_t$. For wikitext-2 we set the $\lambda_0 = 0.1$ and $\lambda_{increment} = 0.0001$. For wikitext-103 we set the $\lambda_0 = 0.01$ and the $\lambda_{increment} = 0.00001$. The CBC based sampling algorithm is formalized in Algorithm \ref{algo:competence}. \\
+Following the work of \cite{Platanios2019CompetencebasedCL} introduced in Section \ref{chap:prior:sec:cl:cl} we will apply the notion of a CBC to LM training. CBC methods rely on the ability to assign a difficulty score to each sample in the training corpus and use this to only allow the model to train on samples that are easier than its current competence level. A model's competence score is defined by how far along in a training regime the model is. \\
+Our training corpus, $X$ is a collection of sentences $S$, where each sentence $s_i$ is a sequence of words $s_i= w_o^i,w_1^i,...,w_n^i$ and each sentence is assigned a difficulty $\epsilon_{s_i}$. At each step in training model competence is represented by $\lambda_t$ where $\lambda_0$ represents the initial competence and $\lambda_{increment}$ represents how much model competence increases after each training batch. Prior to training, each sentence in the training data has been assigned a difficulty score from 0 to 1 represented by $\epsilon_{s_i}$. For each training batch, the model is only able to train on samples that have a difficulty where $\epsilon_{s_i} <= \lambda_t$. \\
+To keep keep curriculum length for CBC and CRS equal we set our curriculum length to 6 epochs do a grid search on $\lambda_{increment}$ and $\lambda_0$ values. After our grid search we select the parameters that provide lowest training perplexity and set value $\lambda_0 = 0.1$  $\lambda_0 = 0.1$ for wikitext-2 and $\lambda_0 = 0.01$ $\lambda_{increment} = 0.00001$ for wikitext-103. The CBC based sampling algorithm is formalized in Algorithm \ref{algo:competence}. \\
 \begin{algorithm}[H]
 \label{algo:competence}
 \SetAlgoLined
@@ -66,7 +67,7 @@ $\lambda_{t+1} = \lambda_t + \lambda_{increment}$\;
 }
 \caption{Competence-based curriculum}
 \end{algorithm}
-To understand the effect of CBC we study 8 different curricula per dataset: 2 baseline and six different difficulty heuristics. The first baseline is a curricula method where we set $\lambdaa_0 = 1$, which means that our model can sample from the entire training dataset. This baseline aims to establish the effect that changing training with sample-without-replacement to sampling-with-replacement has on LM performance. The second baseline is a random curriculum where we sort the file randomly to create our sentence difficulty scores. The goal of this baseline is to establish the effect of any arbitrary curricula on LM training. The following six heuristics we explore are based on common NLP difficulty metrics, the original CBC paper, and some linguistically motivated difficulties. The heuristics are sentence length, unigram sentence probability, bigram sentence probability, trigram sentence probability, part of speech diversity, and sentence dependency complexity. For each methodology, for each $s_i$ in $X$, we compute a difficulty value for each sentence $\epsilon_{s_i}$ and then sort the dataset by this difficulty score. Using the sorted dataset we compute the cumulative density function (CDF) giving each sentence of the difficulty score $\epsilon_{s_i} \in [0,1]$. We will now describe each method.
+To understand the effect of CBC we study 8 different curricula per dataset: 2 baseline and six different difficulty heuristics. The first baseline is a curricula method where we set $\lambda_0 = 1$, which means that our model can sample from the entire training dataset. This baseline aims to establish the effect that changing training with sample-without-replacement to sampling-with-replacement has on LM performance. The second baseline is a random curriculum where we sort the file randomly to create our sentence difficulty scores. The goal of this baseline is to establish the effect of any arbitrary curricula on LM training. The following six heuristics we explore are based on common NLP difficulty metrics, the original CBC paper, and some linguistically motivated difficulties. The heuristics are sentence length, unigram sentence probability, bigram sentence probability, trigram sentence probability, part of speech diversity, and sentence dependency complexity. For each methodology, for each $s_i$ in $X$, we compute a difficulty value for each sentence $\epsilon_{s_i}$ and then sort the dataset by this difficulty score. Using the sorted dataset we compute the cumulative density function (CDF) giving each sentence of the difficulty score $\epsilon_{s_i} \in [0,1]$. We will now describe each method.
 \subsubsection{Sentence Length}
 Formalized in Equation \ref{equation:sentencelen}, this curriculum is built on the idea that is a lot harder to model longer sentences, as longer sentences require better tracking of dependencies. We believe this method would be particularly effective in Transformer based models as it can steer the model into learning how to leverage its multi-headed attention with different sentence lengths. \begin{equation}
     \text{sentence-length-}\epsilon_{s_i} = length(s_i).
