--- a/Thesis/uwthesis.tex
+++ b/Thesis/uwthesis.tex
@@ -22,6 +22,7 @@
 \usepackage[table,xcdraw]{xcolor}
 \usepackage{adjustbox}
 \usepackage{longtable}
+\usepackage{float}
 \usepackage{amsmath}
 \usepackage{caption} 
 \usepackage{rotating}
@@ -56,38 +57,35 @@
 \thispagestyle{plain}
 \chapter*{Glossary}   
 \begin{glossary}
-\item[LM] a language model
-\item[Cl]Curriculum Learning
-\item[GLUE] General Linguistic Understanding Evaluation
-\item[NLP] Natural Language Processing (NLP)
-\item[IR] Information Retrieval
-\item[IE] Information Extraction
-\item[QA] Question Answering
-\item[TL] Transfer Learning
-\item[LSTM] Long Short Term Memory
-\item[CV] Computer Vision
-\item[MT] Machine Translation
-\item[NMT] Neural Machine Translation
-\item[RNN]Recurrent Neural Networks 
-\item[NN] Neural Network
-\item[DNN] Deep Neural Network
-\item[DEP] Dependency Parse
-\item[SOTA] State Of The Art
-\item[GAN] Generative Adversarial Network
-\item[AE] Auto Encoding
-\item[AR] Auto Regressive
-\item[CDF] Cumulative density function
-\item[CNN] convolutional neural network (CNN) 
-\item[MLM] Masked Language Modeling
-\item[NSP] Next Sentence Prediction
-\item[BS] Bengio-Style
-\item[CBC] competency-based curricula
-\item[POS] Part of speech
-\item[MCC] Matthews correlation coefficient 
-\item[F1]  F1 Score is the weighted average of Precision and Recall.
-\item[ACC] Accuracy
-\item[Pear] Pearsons Correlation
-\item[Spear] Spearman Correlation
+\item[Auto Encoding (AE)] A neural network which is used to learn an efficient representation of underlying data distribution by leveraging dimensional reduction to ignore noise in a data. In Language models this typically is implemented by having the network learn to reconstruct a corrupted input.
+\item[Auto Regressive (AR)] A neural network which is used to learn an efficient representation of underlying data distribution by leveraging conditional probability to predict some input based on previous input. In Language models this typically is implemented by having the network learn to predict the next token in a sequence.
+\item[Competence Based Curriculum (CBC)] A method of curriculum learning where the samples in the training data are assigned a notion of difficulty and the model training on this data is gradually allowed to sample from a progressively more difficult dataset.
+\item[Cumulative density function (CDF)] A statistical method used for modeling the distribution of some underlying data using a mathematical function and probability density.
+\item[Curriculum Learning (Cl)] A machine learning training method which introduces structure into the training regime with the goal of increasing model performance or sample efficiency.
+\item[Convolutional Neural Network (CNN)] A type of artificial neuron which applies a convolution to certain portion of input data to extract a stronger signal which is commonly used in computer vision.
+\item[Corpus Replacement Style (CRS)] A method of curriculum learning where less common parts of the corpus are replaced to simplify the training data. This method is run independent of model training and is reusable across models which makes it computationally efficient.
+
+\item[Computer Vision (CV)] A field of research which is focused on producing methods which computers can leverage to understand visual inputs.
+\item[Dependency Parse (DEP)] A method for analyzing the grammatical structure of a sentence and establishing relation between words by creating a tree structure which represents how words modify other words.
+\item[Deep Neural Network (DNN)] A connection of artificial neurons which are arranged in consecutive layers which is commonly used in machine learning to learn some underlying function in a target domain.
+\item[General Linguistic Understanding Evaluation Benchmark (GLUE)] A collection of 11 natural language tasks which is used to evaluate how well a model captures specific aspects of natural language.
+\item[Information Retrieval (IR)] A field of research which is focused on the discovery of documents, image, web-pages, etc. based on user intent.
+\item[Information Extraction (IE)] A field of research which is focused on extracting information from many sources and organizing it in a knowledge-base or knowledge-graph and the application of said representations in downstream tasks.
+\item[Language Model (LM)] A language representation gained by modeling the language in a corpus using statistical methods such as conditional probability.
+\item[Language Representation (LR)] A form of representing the underlying properties of spoken or written language which is usually employed to allow a system to use some form of natural language.
+\item[Long Short Term Memory (LSTM)] A type of artificial neuron for neural networks which has a trainable parameter which controls what information is forgotten between states.
+\item[Masked Language Modeling (MLM)] An auto encoding language model training objective which masks some portion of a textual input which language model must reconstruct. 
+\item[Machine Translation (MT)] A sub-field of Natural Language Processing research which focuses on building systems which can translate inputs from a source language to a target language.
+\item[Natural Language Processing (NLP)] A field of research which is focused on processing, understanding, and interacting with language as used by humans around the globe.
+\item[Neural Machine Translation (NMT)] A sub-field of Machine Translation which leverages Neural Networks to create systems to translate inputs.
+\item[Neural Network (NN)] A connection of artificial neurons which is commonly used in machine learning to learn some underlying function in a target domain.
+\item[Next Sentence Prediction (NSP)] An language model training objective where a language model must predict if input sentences are sequentially related in a training corpus.
+\item[Next Word Prediction (NWP)] An auto regressive language model training objective where a model must predict the next token in a sequence give some preceding set of tokens.
+\item[Part of Speech (POS)] A categorization of tokens based on the syntactic role which they serve.
+\item[Recurrent Neural Networks (RNN)] A type of artificial neuron for neural networks which contains a hidden state which is used to represent a broader input. 
+\item[State-of-the-art (SOTA)] A denotation which defines when a system has the best performance on a given task given some evaluation metric.
+\item[Transfer Learning (TL)] A machine learning method which applies the representation learned in training of one target task to improve performance on a different but related task.
+\item[Question Answering (QA)] A field of research which focuses on answering questions given some input document, usually a textual document.
 \end{glossary}
 \acknowledgments{The author wishes to express sincere appreciation to his family, his Advisor Shane Steinert-Threlkeld, The University of Washington, The City of Seattle, and coffee. }
 
@@ -109,7 +107,7 @@
 \chapter{Experimental Results}
 \label{appendix}
 \section{Validation Perplexity}
-\subsection{Bengio Style}
+\subsection{Corpus Replacement Style}
 \begin{table}[!h]
 \begin{tabular}{|l|l|l|l|l|}
 \hline 
@@ -126,7 +124,7 @@ Epochs & baseline wiki-2 & bs wiki-2 & bs wiki-103 & baseline wiki-103 \\ \hline
 10 & 151.25607 & 153.26689 & 37.029747 & 36.412056 \\ \hline 
 \end{tabular}
 \label{table:corpuscurriculaperplexity}
-\caption{Model Perplexity on validation portion of the train corpus. BS approaches the baseline method without ever passing it.}
+\caption{Model Perplexity on validation portion of the train corpus.}
 \end{table}
 \subsection{Competence Based Curricula}
 \begin{table}
@@ -609,38 +607,38 @@ Batches & Baseline & Random & Dependency & Part of Speech & Unigram & Bigram & T
 \begin{figure}[h]
 \centering
 \label{fig:wikitext-103-sentence}
-\includegraphics[width=10cm, height=10cm]{Thesis/images/wikitext-103lineall.png}
+\includegraphics[ height=10cm]{Thesis/images/wikitext-103lineall.png}
 \caption{Model perplexity on wikitext103-line by curricula including all models.}
 \end{figure}
 \begin{figure}[h]
 \centering
 \label{fig:wikitext-103-sentence}
-\includegraphics[width=10cm, height=10cm]{Thesis/images/wikitext-103lineminusbigram.png}
+\includegraphics[ height=10cm]{Thesis/images/wikitext-103lineminusbigram.png}
 \caption{Model perplexity on wikitext103-line by curricula including all models except for bigram.}
 \end{figure}
 \begin{figure}[h]
 \centering
 \label{fig:wikitext-103-sentence}
-\includegraphics[width=10cm, height=10cm]{Thesis/images/wikitext-103lineminusbigrambaseline.png}
+\includegraphics[ height=10cm]{Thesis/images/wikitext-103lineminusbigrambaseline.png}
 \caption{Model perplexity on wikitext103-line by curricula including all models except for bigram and baseline.}
 \end{figure}
 \begin{figure}[h]
 \centering
 \label{fig:wikitext-103-sentence}
-\includegraphics[width=10cm, height=10cm]{Thesis/images/wikitext-103lineminusbigrambaselinetrigram.png}
+\includegraphics[ height=10cm]{Thesis/images/wikitext-103lineminusbigrambaselinetrigram.png}
 \caption{Model perplexity on wikitext103-line by curricula including all models except for bigram, baseline and trigram.}
 \end{figure}
 \begin{figure}[h]
 \centering
 \label{fig:wikitext-103-sentence}
-\includegraphics[width=10cm, height=10cm]{Thesis/images/wikitext-103lineminusbigrambaselinetrigramunigram.png}
+\includegraphics[ height=10cm]{Thesis/images/wikitext-103lineminusbigrambaselinetrigramunigram.png}
 \caption{Model perplexity on wikitext103-line by curricula without baseline or N-gram methods.}
 \end{figure}
 \begin{figure}[h]
 \centering
 \label{fig:wikitext-103-sentence}
-\includegraphics[width=10cm, height=10cm]{Thesis/images/wikitext-103sentence.png}
-\caption{Model perplexity on wikitext103-sentence with smoothing.}
+\includegraphics[ height=10cm]{Thesis/images/wikitext-103sentence.png}
+\caption{Model perplexity on wikitext103-sentence with all values.}
 \end{figure}
 \vita{Daniel Campos is a PhD student at the University of Illinois Urbana-Champaign where he is working on next generation NLP systems focused on chemistry, agriculture, and truly personal search. {\tt spacemanidol@gmail.com}.}
 \end{document}
